# cvxbench

./: CLAUDE.md  README.md  convex_benchmarks_continuous.md  convex_benchmarks_mip_integer.md  pyproject.toml
.github/workflows/: ci.yml
src/cvxbench/: __init__.py  baseline.py  cli.py  quick.py  results.py  runner.py  validation.py
src/cvxbench/loaders/: __init__.py  base.py  maros_meszaros.py  maxcut.py  sdplib.py  smp.py
tests/: conftest.py  test_baseline.py  test_runner.py  test_validation.py
