[project]
name = "cvxbench"
version = "0.1.0"
description = "Convex optimization benchmark tool"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Chris" }]
keywords = ["optimization", "benchmark", "convex", "cvxpy"]

dependencies = [
    "cvxpy>=1.4",
    "numpy>=1.26",
    "scipy>=1.12",
    "scs>=3.0",
    "ecos>=2.0",
    "tyro>=0.8",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "requests>=2.31",
    "tqdm>=4.65",
]

[project.optional-dependencies]
minix = [
    "minix",
]
mip = [
    "cvxopt",
    "highspy",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.uv.sources]
minix = { path = "../minix/solver-py", editable = true }

[project.scripts]
cvxbench = "cvxbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxbench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
